注册样式修改

--- a/trunk/src/main/webapp/static/common/css/index.css
+++ b/trunk/src/main/webapp/static/common/css/index.css
@@ -142,17 +142,21 @@
   font-size: 18px;
 }
 .header .header-wrapper .head-gologin {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
   float: right;
   height: 78px;
-  line-height: 78px;
+  /*line-height: 78px;*/
 }
 .header .header-wrapper .head-gologin > span {
   color: #999999;
   font-size: 14px;
 }
 .header .header-wrapper .head-gologin > button {
+    margin-left:10px;
   width: 64px;
-  /**height: 32px;*/
+  height: 32px;
   background: #ffe000;
   border-radius: 10px;
   border: none;
@@ -164,14 +168,14 @@
   width: 980px;
   margin: 0 auto;
   min-height: 100px;
-  padding-top: 105px;
+  padding-top: 50px;
   display: flex;
 }
 .container .register-form {
   flex: 1;
 }
 .container .register-form > form > div {
-  height: 46px;
+  height: 30px;
   margin-bottom: 40px;
 }
 .container .register-form > form > div > label {
@@ -245,7 +249,7 @@
   background-size: 100% 100%;
 }
 .footer {
-  padding-top: 213px;
+  padding-top: 50px;
   width: 442px;
   margin: 0 auto;
   min-height: 100px;
